--- a/app/views/checkout/new.html.erb
+++ b/app/views/checkout/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: checkout_index_path, method: :post do |form| %>
+<%= form_with url: checkout_index_path, method: :post, local: true, data: { turbo: false } do |form| %>
     <div>
         <% @products.each do |product| %>
             <h3><%= product.name %></h3>
